# progpath

./: README.md  pyproject.toml  test_progpath.py
.github/workflows/: python-app.yml
progpath/: __init__.py  progpath.py
