[project]
name = "progpath"
version = "0.1.0"
description = "A convenient way to store your program's data."
authors = [{ name = "frosty", email = "inthishouseofcards@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle Error
    "W",   # pycodestyle Warning
    "I",   # isort
    "N",   # pep8-naming
    "Q",   # flake8-quotes
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]
fixable = ["ALL"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
